--- a/package.json
+++ b/package.json
@@ -6,9 +6,9 @@
   },
   "dependencies": {
     "adm-zip": "^0.4.4",
+    "bluebird": "^2.9.10",
     "lodash": "^2.4.1",
     "minimist": "^1.1.0",
-    "q": "^1.1.2",
     "sax": "^0.6.1"
   },
   "bin": {
